[gd_scene load_steps=6 format=3 uid="uid://gr40hrev58he"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_35osg"]
[ext_resource type="Texture2D" uid="uid://cv2wgkxsoyrvw" path="res://assets/0x72_DungeonTilesetII_v1.6.png" id="2_jpuxo"]
[ext_resource type="PackedScene" uid="uid://cq3m034tudra0" path="res://Ultility/base_input_handler.tscn" id="3_g1pmx"]
[ext_resource type="PackedScene" uid="uid://f3q2k36465xx" path="res://Ultility/standard_light.tscn" id="4_jgclu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jsp71"]
radius = 5.0
height = 20.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_35osg")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_jpuxo")
hframes = 9
region_enabled = true
region_rect = Rect2(130, 168, 142, 24)

[node name="BaseInputHandler" parent="." instance=ExtResource("3_g1pmx")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_jsp71")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.3, 1.3)

[node name="PointLight2D" parent="." instance=ExtResource("4_jgclu")]
energy = 0.2

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]

[node name="CheckStuck" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CheckStuck"]
position = Vector2(-1, 3)
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_jsp71")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="CheckStuck" to="." method="_on_check_stuck_body_entered"]
